src/objects/Coffee_GAP_Adoption__c.object
<CustomObject>
    <fields>
        <fullName>Adoption_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Adoption Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coffee_Farmer__c</fullName>
        <label>Coffee Farmer</label>
        <referenceTo>Coffee_Farmer__c</referenceTo>
        <relationshipLabel>3.0 Coffee GAP Adoptions</relationshipLabel>
        <relationshipName>Coffee_GAP_Adoptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coffee_GAPs_Adoption__c</fullName>
        <label>Coffee GAPs Adoption</label>
        <referenceTo>Coffee_GAPs_Adoption__c</referenceTo>
        <relationshipLabel>3.0 Coffee GAP Adoptions</relationshipLabel>
        <relationshipName>Coffee_GAP_Adoptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>CKW Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 Coffee GAP Adoptions</relationshipLabel>
        <relationshipName>Coffee_GAP_Adoptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GAP_Adopted__c</fullName>
        <label>GAP Adopted</label>
        <picklist>
            <picklistValues>
                <fullName>GAP 1 Soil Fertility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 2 Pruning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 2 Stumping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 2 Desuckering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 3 Soil &amp; Water Conservation Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 4 On farm Value Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 5 Record Keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 6 Group Production and Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 7 Proper Weed Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 8 Pest &amp; Disease Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 9 Value Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 10 Easy Access Agro Inputs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>3.0 Coffee GAP Adoption</label>
    <nameField>
        <displayFormat>CGA{YYYY}{MM}{0000}</displayFormat>
        <label>3.0 Coffee GAP Adoption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Coffee GAP Adoptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>